Bug 399166 - SVG image will not be imported as vector layer in Krita 4.1.3
Summary: SVG image will not be imported as vector layer in Krita 4.1.3
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layers/Vector (other bugs)
Version First Reported In: 4.1.3
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-28 05:27 UTC by Kentaro Hayashi
Modified: 2018-10-10 09:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kentaro Hayashi 2018-09-28 05:27:24 UTC
SUMMARY

  SVG image will not be imported as vector layer. It is imported as paint layer.


STEPS TO REPRODUCE

  1. Click [Layer] menu
  2. Select [Import/Export] menu
  3. Select [Import Layer...] menu
  4. Select svg image from dialog window

OBSERVED RESULT

  Selected svg image is imported as painter layer.

EXPECTED RESULT

  Selected svg image is imported as vector layer.

SOFTWARE VERSIONS

  Krita 1:4.1.3+dfsg-1
  KDE Plasma Version: 4:4.14.38-2
  KDE Frameworks Version: 4:4.14.38-2
  Qt Version: 5.11.1+dfsg-9

ADDITIONAL INFORMATION

  It seems that Krita 2.9 can import SVG as vecor layer.
    https://bugs.kde.org/show_bug.cgi?id=333451#c11

  This issue is discussed at forum but not tracked in bugs.kde.org.

    SVG import in Krita 4
    https://forum.kde.org/viewtopic.php?f=281&t=151598&p=402444&hilit=svg+import#p396450

  As a workaround, copy&paste from inkscape is work as expected ( pasted as vector layer)
Comment 1 Halla Rempt 2018-10-08 09:08:12 UTC
Actuall
Comment 2 Halla Rempt 2018-10-08 10:03:17 UTC
Git commit 4511c00ff053a235fc8d04f112f334b2c722600e by Boudewijn Rempt.
Committed on 08/10/2018 at 10:02.
Pushed by rempt into branch 'master'.

Import SVG as vector layers

M  +9    -3    libs/ui/kis_image_manager.cc
M  +17   -4    libs/ui/kis_import_catcher.cc
M  +30   -24   libs/ui/kis_layer_manager.cc
M  +8    -8    libs/ui/kis_layer_manager.h
M  +12   -12   libs/ui/kis_mask_manager.cc
M  +5    -5    libs/ui/kis_mask_manager.h
M  +20   -19   libs/ui/kis_node_manager.cpp
M  +1    -1    libs/ui/kis_node_manager.h

https://commits.kde.org/krita/4511c00ff053a235fc8d04f112f334b2c722600e
Comment 3 Halla Rempt 2018-10-10 09:57:40 UTC
Git commit b98ae216d3dc5a0664f41a834c07735da3917c8c by Boudewijn Rempt.
Committed on 10/10/2018 at 07:41.
Pushed by rempt into branch 'krita/4.1'.

Import SVG as vector layers
(cherry picked from commit 4511c00ff053a235fc8d04f112f334b2c722600e)

M  +9    -3    libs/ui/kis_image_manager.cc
M  +17   -4    libs/ui/kis_import_catcher.cc
M  +30   -24   libs/ui/kis_layer_manager.cc
M  +8    -8    libs/ui/kis_layer_manager.h
M  +12   -12   libs/ui/kis_mask_manager.cc
M  +5    -5    libs/ui/kis_mask_manager.h
M  +20   -19   libs/ui/kis_node_manager.cpp
M  +1    -1    libs/ui/kis_node_manager.h

https://commits.kde.org/krita/b98ae216d3dc5a0664f41a834c07735da3917c8c