Import SVG as vector layers

BUG:399166
(cherry picked from commit 4511c00ff053a235fc8d04f112f334b2c722600e)